Adds much asthetic styling Changes the marker icons

--- a/index.html
+++ b/index.html
@@ -31,7 +31,25 @@
 
 				<hr />
 
-				<ul class="postcode-list"></ul>
+				<ul class="postcode-list">
+					<li class="location">
+						<div class="left">
+							<p class="label-counter">1</p>
+						</div>
+						<div class="right">
+							<div class="head-content">
+								<p class="head-txt">SK14 3dx</p>
+								<p class="distance">
+									0.44miles
+								</p>
+							</div>
+							<a href="#" class="direction">
+								Get directions <i class="fa-solid fa-arrow-right"></i>
+							</a>
+							
+						</div>
+					</li>
+				</ul>
 			</div>
 
 			<div class="map" id="map"></div>
