implements sweet alert to handle User friendly responses

--- a/index.html
+++ b/index.html
@@ -32,23 +32,7 @@
 				<hr />
 
 				<ul class="postcode-list">
-					<li class="location">
-						<div class="left">
-							<p class="label-counter">1</p>
-						</div>
-						<div class="right">
-							<div class="head-content">
-								<p class="head-txt">SK14 3dx</p>
-								<p class="distance">
-									0.44miles
-								</p>
-							</div>
-							<a href="#" class="direction">
-								Get directions <i class="fa-solid fa-arrow-right"></i>
-							</a>
-							
-						</div>
-					</li>
+					Nothing to show
 				</ul>
 			</div>
 
@@ -58,6 +42,7 @@
 		<script async src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCq5-sxvyYuqqG2R8DbzCYj-a_Fqu8-MAI&libraries=geometry,places,marker&callback=initMap"></script>
 
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+		<script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 		<script src="js/kd-tree.js"></script>
 		<script src="js/main.js"></script>
 	</body>
